UI: Fixed Sidebar Current HP alignment

--- a/src/styles/actor/sidebar/_index.scss
+++ b/src/styles/actor/sidebar/_index.scss
@@ -52,6 +52,10 @@ aside {
             justify-content: space-between;
             align-items: flex-end;
             margin: 1em 0 0.5em;
+
+            &:first-of-type {
+                margin-bottom: -1px;
+            }
             h2,
             h4,
             a {
